# stock-explorer

./: .gitignore  AGENTS.md  MEMORY.md  README.md  STATUS.md  _apply_health_i18n.py  _test_imports.py  _tmp_locale_en.py  _tmp_locale_zhtw.py  _tmp_replace_health.py  _verify_all.py  _verify_imports.py  _verify_layer0.py  _verify_layer1.py  _verify_layer2.py  _verify_m5_detection.py  _verify_no_inline_html.py  _verify_streamlit.py  _verify_summary.md  analysis_summary.md  append_en.py  check_locale_keys.py  check_locale_keys_detail.py  conftest.py  count_dict.py  count_dict2.py  design_improvement_suggestions.md  design_improvement_task_summary.md  find_strings.py  find_strings2.py  fix_en.py  fix_imports.py  fix_zh_tw.py  inserted_en.txt  inserted_en_corrected.txt  inserted_zh.txt  main.py  memory.db  new_revenue_dict.txt  process_metric_education.py  (+7 more)
config/: chinese_names.yaml  comprehension_quiz.yaml  event_interpretation_templates.yaml  events.yaml  movement_explanation_templates.yaml  quiz.yaml
data/: moat_data.yaml
design/: index.html
docs/: ARCHITECTURE.md  ARCHITECTURE_FIXES.md  CHALLENGE_LOG.md  COMPETITOR_RESEARCH.md  CRON_ROLE_MAP.md  CURRENT_PROBLEMS.md  DESIGN_REVIEW.md  DESIGN_SYSTEM.md  ISSUES.md  M4_DESIGN.md  M5_DESIGN.md  PENDING_REVIEW.md  PRODUCT_VISION.md  SIDEBAR_ARCHITECTURE.md  SIDEBAR_GAP_ANALYSIS.md  SIDEBAR_RESEARCH.md  SIDEBAR_UX_DESIGN.md  TECHNICAL_DESIGN.md  TECH_DEBT.md  UX_IMPROVEMENTS.md  VERIFY_LOG.md  _m2_verify.py  check_python.py  etf-section-review.md  screenshot_verify.py  security-review-td01.md  verify_report.md
graphify-out/: .graphify_labels.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
locales/: en.yaml  en.yaml.bak  (+1 more)
(+586 files in other folders)
