[project]
name = "stock-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "finmind>=1.9.11",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tqdm>=4.68.1",
]
