[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.29.1",
    "finmind>=1.9.11",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "tone: tone blocklist QA scan (tests/test_tone_qa.py)",
    "ui: UI tests that need Streamlit server",
    "playwright: Playwright UI tests",
]
